--- a/app/src/main/res/layout/fragment_add_travel.xml
+++ b/app/src/main/res/layout/fragment_add_travel.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddTravelFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -13,83 +14,128 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
                 android:layout_marginTop="64dp"
+                android:gravity="center_horizontal"
+                android:text="LISÄÄ UUSI MATKA"
                 android:textSize="20pt"
-                android:text="LISÄÄ UUSI MATKA" />
+                />
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
-                android:layout_marginTop="32dp">
+                android:layout_marginTop="32dp"
+                >
 
                 <HorizontalScrollView
+                    android:id="@+id/mode_scroll_view"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:paddingHorizontal="8dp"
+                    >
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        >
 
                         <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="kävely"
-                            android:layout_marginHorizontal="8dp"/>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:backgroundTint="@color/russian_green_walk"
                             android:layout_marginHorizontal="8dp"
-                            android:text="pyöräily" />
+                            android:foreground="@drawable/ic_walk"
+                            android:foregroundGravity="center"
+                            android:foregroundTint="@color/white"
+                            android:minWidth="0dp"
+                            android:minHeight="0dp"
+                            />
 
                         <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:backgroundTint="@color/olive_green_bike"
                             android:layout_marginHorizontal="8dp"
-                            android:text="auto" />
+                            android:foreground="@drawable/ic_bike"
+                            android:foregroundGravity="center"
+                            android:foregroundTint="@color/white"
+                            android:gravity="center"
+                            android:minWidth="0dp"
+                            android:minHeight="0dp"
+                            />
 
                         <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:backgroundTint="@color/maximum_yellow_train"
                             android:layout_marginHorizontal="8dp"
-                            android:text="bussi" />
+                            android:foreground="@drawable/ic_train"
+                            android:foregroundGravity="center"
+                            android:foregroundTint="@color/white"
+                            android:minWidth="0dp"
+                            android:minHeight="0dp"
+                            />
 
                         <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:backgroundTint="@color/raw_sienna_bus"
                             android:layout_marginHorizontal="8dp"
-                            android:text="juna" />
+                            android:foreground="@drawable/ic_bus"
+                            android:foregroundGravity="center"
+                            android:foregroundTint="@color/white"
+                            android:minWidth="0dp"
+                            android:minHeight="0dp"
+                            />
+
+                        <Button
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:backgroundTint="@color/deep_chestnut_car"
+                            android:layout_marginHorizontal="8dp"
+                            android:foreground="@drawable/ic_car"
+                            android:foregroundGravity="center"
+                            android:foregroundTint="@color/white"
+                            android:minWidth="0dp"
+                            android:minHeight="0dp"
+                            />
+
                     </LinearLayout>
                 </HorizontalScrollView>
             </FrameLayout>
 
             <EditText
-                android:layout_width="match_parent"
+                android:id="@+id/value_input"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
-                android:hint="Syöte tulee tähän" />
+                android:inputType="number"
+                android:hint="Syöte tulee tähän"
+                />
 
             <CalendarView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="32dp" />
-
+                android:layout_marginTop="32dp"
+                />
 
         </LinearLayout>
     </ScrollView>
@@ -101,7 +147,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        android:text="SUBMIT"/>
+        android:text="SUBMIT"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
