--- a/app/src/main/res/layout/fragment_add_travel.xml
+++ b/app/src/main/res/layout/fragment_add_travel.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddTravelFragment"
     android:orientation="vertical"
+    android:theme="@style/Theme.OlioHT"
     >
 
     <ScrollView
