--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,19 +3,22 @@
     <group>
         <item
             android:id="@+id/menu_home"
+            android:icon="@drawable/ic_home"
             android:title="Home"/>
         <item
             android:id="@+id/menu_charts"
+            android:icon="@drawable/ic_chart"
+
             android:title="Charts"/>
         <item
             android:id="@+id/menu_settings"
+            android:icon="@drawable/ic_settings"
             android:title="Settings"/>
-    </group>
-    <group>
     </group>
     <group >
         <item
             android:id="@+id/menu_logout"
+            android:icon="@drawable/ic_logout"
             android:title="Logout"/>
     </group>
 </menu>
