--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -49,12 +49,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
+        android:id="@+id/showLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View log"
         android:layout_marginBottom="32dp"
         android:clickable="true"
         android:focusable="true"
+        android:text="View log"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
