LoginActivity fragmentteineen ulkoasu valmis
-VI

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MissingClass">
+
     <FrameLayout
-        android:id="@+id/frame_main"
+        android:id="@+id/frameFragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
