--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -47,7 +47,7 @@
         android:layout_marginTop="8dp"
         android:text="register"
         android:textSize="20sp"
-        android:onClick="returnLogin"
+        android:onClick="returnRegister"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/login"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +61,7 @@
         android:layout_marginTop="8dp"
         android:text="login"
         android:textSize="20sp"
+        android:onClick="login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/register"
