--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
     tools:context=".SettingsFragment">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_profile_pic_settings"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_person"
@@ -24,10 +24,10 @@
         android:text="Käyttäjä Niminen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_profile_pic_settings" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_edit_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
@@ -46,7 +46,7 @@
         android:layout_marginTop="32dp"
         android:text="Dark Mode"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile" />
 
     <TextView
         android:id="@+id/showLog"
