--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,7 +14,7 @@
         android:id="@+id/iv_profile_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@android:drawable/ic_menu_view"
+        android:src="@drawable/ic_person"
         />
 
     <TextView
