--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/CO2_est_text" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="change to last week"
