added some functionality to AddTravel

--- a/app/src/main/res/layout/fragment_add_travel.xml
+++ b/app/src/main/res/layout/fragment_add_travel.xml
@@ -146,7 +146,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"
                 android:inputType="number"
-                android:hint="Syöte tulee tähän"
+                android:hint="Lenght of the travel"
                 />
 
             <CalendarView
