--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".SettingsFragment">
 
+    <Button
+        android:id="@+id/btn_add_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="add"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/iv_profile_pic_2"
+        app:layout_constraintTop_toTopOf="@+id/iv_profile_pic_2" />
+
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_profile_pic_2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ic_person"
         android:layout_marginTop="32dp"
+        android:src="@drawable/ic_person"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +53,7 @@
         android:text="username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_profile_pic_2" />
 
     <TableLayout
         android:id="@+id/tl1"
