--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".SettingsFragment">
 
+
     <Button
         android:id="@+id/btn_add_pic"
         android:layout_width="wrap_content"
@@ -16,12 +17,13 @@
         app:layout_constraintStart_toEndOf="@+id/iv_profile_pic_2"
         app:layout_constraintTop_toTopOf="@+id/iv_profile_pic_2" />
 
+
     <ImageView
         android:id="@+id/iv_profile_pic_2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="32dp"
         android:src="@drawable/ic_person"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -139,9 +141,9 @@
         android:id="@+id/btn_save_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
         android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tl1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
